Fixed error page + add item form bug + added basic dark mode theme
Error page respects dark theme choice, button icon was wonky. Add item page doesn't moan about form inputs,

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,10 @@ main {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-
+[type="checkbox"].filled-in:checked + span:not(.lever):after {
+  border: 2px solid green;
+  background-color: green;
+}
 th.tableHeader:hover{
 	cursor: pointer;
 }
@@ -54,14 +57,6 @@ th.tableHeader:hover{
 }
 #editName a:hover{
 	color: black;
-}
-.consoleText{
-  color: #f5f5f5;
-  background-color: #212121;
-  font-size: 16px;
-  padding: 2%;
-  text-align: left;
-  font-family: "Lucida Console", Monaco, monospace;
 }
 .errortext{
   color: black;
